; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/html/extr_css-parse.c_css_lex_expect.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/html/extr_css-parse.c_css_lex_expect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lexbuf = type { i32 }

@.str = private unnamed_addr constant [21 x i8] c"unexpected character\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.lexbuf*, i32)* @css_lex_expect to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @css_lex_expect(%struct.lexbuf* %0, i32 %1) #0 {
  %3 = alloca %struct.lexbuf*, align 8
  %4 = alloca i32, align 4
  store %struct.lexbuf* %0, %struct.lexbuf** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.lexbuf*, %struct.lexbuf** %3, align 8
  %6 = load i32, i32* %4, align 4
  %7 = call i32 @css_lex_accept(%struct.lexbuf* %5, i32 %6)
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %12, label %9

9:                                                ; preds = %2
  %10 = load %struct.lexbuf*, %struct.lexbuf** %3, align 8
  %11 = call i32 @fz_css_error(%struct.lexbuf* %10, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0))
  br label %12

12:                                               ; preds = %9, %2
  ret void
}

declare dso_local i32 @css_lex_accept(%struct.lexbuf*, i32) #1

declare dso_local i32 @fz_css_error(%struct.lexbuf*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
